// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser getClosestExpression Can find a local var 1`] = `
Object {
  "expression": "beta",
  "location": SourceLocation {
    "end": Position {
      "column": 23,
      "line": 15,
    },
    "identifierName": "beta",
    "start": Position {
      "column": 19,
      "line": 15,
    },
  },
}
`;

exports[`parser getClosestExpression member expressions Can find a member expression 1`] = `
Object {
  "expression": "obj.x",
  "location": SourceLocation {
    "end": Position {
      "column": 31,
      "line": 15,
    },
    "start": Position {
      "column": 26,
      "line": 15,
    },
  },
}
`;

exports[`parser getClosestExpression member expressions find a nested expression 1`] = `
Object {
  "expression": "obj2.c.secondProperty",
  "location": SourceLocation {
    "end": Position {
      "column": 33,
      "line": 2,
    },
    "start": Position {
      "column": 12,
      "line": 2,
    },
  },
}
`;

exports[`parser getClosestExpression member expressions finds an expression with a call 1`] = `
Object {
  "expression": undefined,
  "location": SourceLocation {
    "end": Position {
      "column": 0,
      "line": 24,
    },
    "start": Position {
      "column": 0,
      "line": 1,
    },
  },
}
`;
